--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,197 @@
 <html lang="ru-RU">
 <head>
 	<meta charset="UTF-8">
-	<title>Barbershop</title>
-	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
+	<title>Барбершоп «Бородинский»</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<h1>Workflow - часть 1</h1>
+	<!--[if lt IE 9]>
+		<p class="browsehappy">ВЫ используете <strong>устаревший</strong> браузер. Пожалуйста <a href="http://browsehappy.com/">обновите</a> его</p>
+		<![endif]-->
+
+	<div class="wrapper">
+		<div class="maincontent">
+			<header class="header">
+				<div class="container container__header">
+					<div class="header-menu">
+						<aside class="sidebar">
+							<nav class="nav">
+								<ul class="nav_list">
+									<li class="nav__item">
+										<a href="#" class="nav__link">Информация</a>
+									</li>
+									<li class="nav__item">
+										<a href="#" class="nav__link">Новости</a>
+									</li>
+									<li class="nav__item">
+										<a href="#" class="nav__link">Прайс-лист</a>
+									</li>
+									<li class="nav__item">
+										<a href="#" class="nav__link">Магазин</a>
+									</li>
+									<li class="nav__item">
+										<a href="#" class="nav__link">Контакты</a>
+									</li>
+								</ul>
+							</nav>
+						</aside>
+					</div>
+					<div class="header-user">
+						<div class="user-block">
+							<a href="#" class="user-block__link">Вход</a>
+						</div>	
+					</div>
+				</div>
+			</header>
+			<main class="main">
+				<div class="container">
+					<div class="main-logo">
+						<img src="img/logo-big.png" alt="Барбершоп «Бородинский»" class="logo-big">
+					</div>
+					<section class="features">
+						<ul class="features__list">
+							<li class="features__item">
+								<div class="features__content">
+									<div class="features__title">Быстро</div>
+									<p>
+										Мы делаем свою работу быстро! Два часа пролетят незаметно и вы-счастливый обладатель стильной стрижки-минутки!
+									</p>
+								</div>
+							</li>
+							<li class="features__item">
+								<div class="features__content">
+									<div class="features__title">Круто</div>
+									<p>
+										Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.
+									</p>
+								</div>
+							</li>
+							<li class="features__item">
+								<div class="features__content">
+									<div class="features__title">Дорого</div>
+									<p>
+										Наши мастера-профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?
+									</p>
+								</div>
+							</li>
+						</ul>
+					</section>
+					<div class="index-content">
+						<div class="index-content__left">
+							<div class="news">
+								<h2 class="news__title index-content__title">Новости</h2>
+								<ul class="news__list">
+									<li class="news__item">
+										<p>
+											Нам наконец завезли ягермайстер! Теперь вы можете пропустить стаканчик во время стрижки
+										</p>
+										<time>11 января</time>
+									</li>
+									<li class="news__item">
+										<p>
+											В нашей команде пополнение, Борис «Бритва» Стригунец, обладатель множества титулов и наград пополнил наши стройные ряды
+										</p>
+										<time>18 января</time>
+									</li>
+								</ul>
+								<div class="btn">
+									<a href="#" class="btns btn__link">Все новости</a>
+								</div>
+							</div>
+						</div>
+						<div class="index-content__right">
+							<div class="gallery">
+								<h2 class="gallery__title index-content__title">Фотогалерея</h2>
+								<div class="gallery__block">
+									<figure class="gallery__content">
+										<img src="img/gallery/gallery-img.png" alt="Фотогалерея" class="gallery__img">
+									</figure>
+									<button class="btns gallery-prev" type="button">Назад</button>
+									<button class="btns gallery-next" type="button">Вперед</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="index-content">
+						<div class="index-content__left">
+							<div class="contacts">
+								<h2 class="contacts__title index-content__title">Контактная информация</h2>
+								<div class="contacts__desc">
+									<p>
+										Барбершоп «Бородинский»<br>
+										Адрес: г.Санкт-Петербург, б.Конюшенная, д.19/8 <br>
+										Телефон: +7(495)666-02-66
+									</p>
+									<p>
+										Время работы: <br>
+										пн-пт: с 10:00 до 22:00 <br>
+										сб-вс: с 10:00 до 19:00 <br>
+									</p>
+								</div>
+								<div class="btn">
+									<a href="#" class="btns btn__link">Как проехать</a>
+									<a href="#" class="btns btn__link">Обратная связь</a>
+								</div>
+							</div>
+						</div>
+						<div class="index-content__right">
+							<div class="feedback">
+								<h2 class="feedback__title index-content__title">Записаться</h2>
+								<p>
+									Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони
+								</p>
+								<form class="feedback-form" action="" method="post">
+									<input type="text" name="data" placeholder="Дата">
+									<input type="text" name="time" placeholder="Время">
+									<input type="text" name="name" placeholder="Имя">
+									<input type="text" name="phone" placeholder="Телефон">
+									<button class="btns" type="submit">Отправить</button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</main>
+		</div>
+	</div>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__left">
+				<div class="footer-contacts">
+					<p>
+						Барбершоп «Бородинский»<br>
+						Адрес: г.Санкт-Петербург, б.Конюшенная, д.19/8 <br>
+						<a href="" class="contacts__link">Как нас найти?</a><br>
+						Телефон: +7(495)666-02-66
+					</p>
+				</div>
+				<div class="footer-socials">
+					<span class="socials__title">Давайте дружить!</span>
+					<ul class="socials__list">
+						<li class="socials__item">
+							<a href="#" class="socials__link socials__link-vk">vk.com</a>
+						</li>
+						<li class="socials__item">
+							<a href="#" class="socials__link socials__link-fb">facebook.com</a>
+						</li>
+						<li class="socials__item">
+							<a href="#" class="socials__link socials__link-ig">instagram.com</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="footer__right">
+				<div class="footer-copyright">
+					<span class="copyright__title">Разработано:</span>
+					<div class="copyright__content">
+						<a href="https://htmlacademy.ru" class="copyright__link">HTMLAcademy.ru</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 	
 	<!-- // <script src="bower/jquery/jquery.js"></script> -->
 	<!-- // <script src="js/main.js"></script> -->
