--- a/app/index.html
+++ b/app/index.html
@@ -15,19 +15,19 @@
 	<div class="wrapper">
 		<div class="maincontent">
 			<header class="header">
-				<div class="container container__header">
+				<div class="container">
 					<div class="header-menu">
 						<aside class="sidebar">
 							<nav class="nav">
 								<ul class="nav_list">
 									<li class="nav__item">
-										<a href="#" class="nav__link">Информация</a>
+										<a href="price.html" class="nav__link">Информация</a>
 									</li>
 									<li class="nav__item">
 										<a href="#" class="nav__link">Новости</a>
 									</li>
 									<li class="nav__item">
-										<a href="#" class="nav__link">Прайс-лист</a>
+										<a href="price.html" class="nav__link">Прайс-лист</a>
 									</li>
 									<li class="nav__item">
 										<a href="#" class="nav__link">Магазин</a>
@@ -46,7 +46,7 @@
 					</div>
 				</div>
 			</header>
-			<main class="main">
+			<main class="index">
 				<div class="container">
 					<div class="main-logo">
 						<img src="img/logo-big.png" alt="Барбершоп «Бородинский»" class="logo-big">
@@ -109,8 +109,8 @@
 									<figure class="gallery__content">
 										<img src="img/gallery/gallery-img.png" alt="Фотогалерея" class="gallery__img">
 									</figure>
-									<button class="btns gallery-prev" type="button">Назад</button>
-									<button class="btns gallery-next" type="button">Вперед</button>
+									<button class="gallery__btn gallery__btn-prev" type="button">Назад</button>
+									<button class="gallery__btn gallery__btn-next" type="button">Вперед</button>
 								</div>
 							</div>
 						</div>
