--- a/app/shop.html
+++ b/app/shop.html
@@ -20,7 +20,7 @@
 						<nav class="nav">
 							<div class="nav__logo">
 								<a href="index.html" class="logo">
-									<img src="img/logo.png" alt="Барбершоп «Бородинский" class="logo__img">
+									<img src="img/logo.png" alt="Барбершоп «Бородинский" class="logo.img">
 									<span class="logo-text">"Барбершоп «Бородинский"</span>
 								</a>
 							</div>
@@ -31,11 +31,11 @@
 								<li class="nav__item">
 									<a href="#" class="nav__link">Новости</a>
 								</li>
-								<li class="nav__item active">
-									<a class="nav__link">Прайс-лист</a>
-								</li>
 								<li class="nav__item">
-									<a href="shop.html" class="nav__link">Магазин</a>
+									<a href="price.html" class="nav__link">Прайс-лист</a>
+								</li>
+								<li class="nav__item active">
+									<a class="nav__link">Магазин</a>
 								</li>
 								<li class="nav__item">
 									<a href="#" class="nav__link">Контакты</a>
@@ -53,98 +53,65 @@
 				</div>
 			</header>
 
-			<main class="inner inner--price">
+			<main class="inner inner--shop">
 				<div class="container">
 					<div class="inner__header">
 						<h1 class="inner__title">
-							Прайс-лист
+							Средства для ухода
 						</h1>
 						<ul class="breadcrumbs">
 							<li class="breadcrumbs__item">
 								<a href="" class="breadcrumbs__link">Главная</a>
 							</li>
+							<li class="breadcrumbs__item">
+								<a href="" class="breadcrumbs__link">Магазин</a>
+							</li>
 							<li class="breadcrumbs__item current">
-								<a class="breadcrumbs__link">Прайс-лист</a>
+								<a class="breadcrumbs__link">Средства для ухода</a>
 							</li>
 						</ul>
 					</div>
-					<div class="inner__content">
-						<div class="content__heading">
-							<h2>
-								Истинно мужская класcика
-							</h2>
-						</div>
-						<div class="inner__coloms">
-							<div class="inner__coloms-left">
-								<div class="means">
-									<div class="content__title">
-										<h2>Мы используем только лучшие средства:</h2>
-									</div>
-									<ul class="means__list">
-										<li class="means__item">
-											<span>Baxter of California</span>
-										</li>
-										<li class="means__item">
-											<span>Mr Natty</span>
-										</li>
-										<li class="means__item">
-											<span>Suavecito</span>
-										</li>
-										<li class="means__item">
-											<span>Malin+Goetz</span>
-										</li>
-									</ul>
-								</div>
-							</div>
-							
-							<div class="inner__coloms-right">
-								<div class="price__service">
-									<div class="content__title">
-										<h2>Цены на услуги наших мастеров:</h2>
-									</div>
-									<table class="price__table">
-										<tr>
-											<td>Стрижка </td>
-											<td>1500 р.</td>
-										</tr>
-										<tr>
-											<td>Стрижка бороды</td>
-											<td>500 р.</td>
-										</tr>
-										<tr>
-											<td>Накрутка усов</td>
-											<td>350 р.</td>
-										</tr>
-									</table>
-								</div>	
-							</div>
-						</div>
-						<div class="about">
-							<div class="content__title">
-								<h2>Несколько слов о нас:</h2>
-							</div>
-							<div class="about__coloms">
-								<div class="about__coloms-left">
-									<div class="about__desc">
-										<p>
-											Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиентадля нас-это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество
-										</p>
-									</div>
-								</div>
-								<div class="about__coloms-right">
-									<div class="about__desc">
-										<p>
-											Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+	
+					<aside class="saidebar">
+						<h2 class="content__title">
+							Производители:
+						</h2>
+						<ul class="made">
+							<li class="made__item">
+								<div class="made__check-elem"></div>
+								<div class="made__check-text">Baxter of california</div>
+							</li>
+							<li class="made__item">
+								<div class="made__check-elem"></div>
+								<div class="made__check-text">Mr Natty</div>
+							</li>
+							<li class="made__item">
+								<div class="made__check-elem"></div>
+								<div class="made__check-text">Suavecito</div>
+							</li>
+							<li class="made__item">
+								<div class="made__check-elem"></div>
+								<div class="made__check-text">Malin+Goetz</div>
+							</li>
+							<li class="made__item">
+								<div class="made__check-elem"></div>
+								<div class="made__check-text">Murray`s</div>
+							</li>
+							<li class="made__item">
+								<div class="made__check-elem"></div>
+								<div class="made__check-text">American crew</div>
+							</li>
+						</ul>
+						<h2 class="content__title">
+							Группы товаров:
+						</h2>
+					</aside>
+					
 				</div>
 			</main>
 		</div>
 	</div>
+
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__left">
