--- a/app/index.html
+++ b/app/index.html
@@ -16,33 +16,33 @@
 		<div class="maincontent">
 			<header class="header">
 				<div class="container">
-					<div class="header-menu">
-						<aside class="sidebar">
-							<nav class="nav">
-								<ul class="nav_list">
-									<li class="nav__item">
-										<a href="price.html" class="nav__link">Информация</a>
-									</li>
-									<li class="nav__item">
-										<a href="#" class="nav__link">Новости</a>
-									</li>
-									<li class="nav__item">
-										<a href="price.html" class="nav__link">Прайс-лист</a>
-									</li>
-									<li class="nav__item">
-										<a href="#" class="nav__link">Магазин</a>
-									</li>
-									<li class="nav__item">
-										<a href="#" class="nav__link">Контакты</a>
-									</li>
-								</ul>
-							</nav>
-						</aside>
+					<div class="header__menu">
+						<nav class="nav">
+							<ul class="nav_list">
+								<li class="nav__item">
+									<a href="price.html" class="nav__link">Информация</a>
+								</li>
+								<li class="nav__item">
+									<a href="#" class="nav__link">Новости</a>
+								</li>
+								<li class="nav__item">
+									<a href="price.html" class="nav__link">Прайс-лист</a>
+								</li>
+								<li class="nav__item">
+									<a href="shop.html" class="nav__link">Магазин</a>
+								</li>
+								<li class="nav__item">
+									<a href="#" class="nav__link">Контакты</a>
+								</li>
+							</ul>
+						</nav>
 					</div>
-					<div class="header-user">
-						<div class="user-block">
-							<a href="#" class="user-block__link">Вход</a>
-						</div>	
+					<div class="header__user">
+						<ul class="user">
+							<li class="user__item">
+								<a href="#" class="user__link">Вход</a>
+							</li>
+						</ul>	
 					</div>
 				</div>
 			</header>
@@ -132,7 +132,7 @@
 									</p>
 								</div>
 								<div class="btn">
-									<a href="#" class="btns btn__link">Как проехать</a>
+									<a href="#" class="btns btn__link open-map">Как проехать</a>
 									<a href="#" class="btns btn__link">Обратная связь</a>
 								</div>
 							</div>
@@ -144,10 +144,10 @@
 									Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони
 								</p>
 								<form class="feedback-form" action="" method="post">
-									<input type="text" name="data" placeholder="Дата">
-									<input type="text" name="time" placeholder="Время">
-									<input type="text" name="name" placeholder="Имя">
-									<input type="text" name="phone" placeholder="Телефон">
+									<input class="feedback-form__input form__input" type="text" name="data" placeholder="Дата">
+									<input class="feedback-form__input form__input" type="text" name="time" placeholder="Время">
+									<input class="feedback-form__input form__input" type="text" name="name" placeholder="Имя">
+									<input class="feedback-form__input form__input" type="text" name="phone" placeholder="Телефон">
 									<button class="btns" type="submit">Отправить</button>
 								</form>
 							</div>
@@ -193,8 +193,35 @@
 			</div>
 		</div>
 	</footer>
+	<div class="popup">
+		<button class="popup__close modal__close" type="button" title="Закрыть">Закрыть</button>
+		<div class="popup__title">
+			Личный кабинет
+		</div>
+		<div class="popup__desc">
+			Введите пожалуйста свой логин и пароль
+		</div>
+		<form class="popup__form" action="" method="post">
+			<input class="popup__input form__input" type="text" name="login" placeholder="Логин">
+			<input class="popup__input form__input" type="text" name="password" placeholder="Пароль">
+			<label class="checkbox">
+				<input class="checkbox__input" type="checkbox" name="remember">
+				<div class="checkbox__fake"></div>
+				<span class="checkbox-text">Запомните меня</span>
+			</label>
+			<a class="popup__link-restore" href="#">Я забыл пароль!</a>
+			<button class="popup__btn btns" type="submit">Войти</button>
+		</form>
+	</div>
+	<div class="map">
+		<button class="map__close modal__close" type="button" title="Закрыть">Закрыть</button>
+		<div class="map-content">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3361.25926038903!2d30.319776191726717!3d59.93850199824901!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1472990777310" width="772" height="562" frameborder="0" style="border:0" allowfullscreen></iframe
+		</div>
+	</div>
+	<div class="overlay"></div>
 	
 	<!-- // <script src="bower/jquery/jquery.js"></script> -->
-	<!-- // <script src="js/main.js"></script> -->
+	<script src="js/main.js"></script>
 </body>
 </html>
